# sentinelgrid

./: .env.example  .gitignore  Makefile  README.md  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  refresh-live-data.yml
api/: Dockerfile  README.md  requirements.txt
api/app/: config.py  db.py  ingest.py  logsetup.py  main.py  metrics.py  mqtt_ingest.py  queries.py  ratelimit.py  schemas.py  serialize.py
api/tests/: test_auth_ratelimit.py  test_integration_db.py  test_snapshot_shape.py  test_validation.py
db/: alembic.ini
db/alembic/: env.py  script.py.mako
db/alembic/versions/: 0001_baseline.py  0002_worker_v2.py
db/seeds/: devices.json
docs/: ARCHITECTURE.md  DATA_MODEL.md  MQTT_CONTRACT.md  REVIEWERS.md  ROADMAP.md  ui-roadmap.md
edge-sim/: CMakeLists.txt  README.md
edge-sim/src/: main.cpp
infra/: docker-compose.yml
infra/mosquitto/: mosquitto.conf  passwd
scripts/: dev-check.sh  loadtest.k6.js  mqtt_bridge.py
web/: .gitignore  README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  playwright.config.ts
web/e2e/: mobile.spec.ts  smoke.spec.ts
web/scripts/: fetch-live-data.mjs  fetch-stations.mjs
web/src/app/: globals.css  (+2 more)
worker/: Dockerfile  README.md  requirements.txt
worker/app/: alerts.py  archive.py  backtest.py  baselines.py  db.py  iforest.py  jobs.py  main.py  scoring.py
worker/data/: sample_labels.json  sample_readings.ndjson
worker/jobs/: score_anomalies.py
worker/tests/: test_alerts.py  test_archive.py  test_backtest.py  test_baselines.py  test_iforest.py  test_scoring.py
(+50 files in other folders)
